@@ -1,5 +1,7 @@
 Release 0.4.0-1313 (June 09, 2010)
 ==================================
+* confidence interval optimizations now jitter if they can't get started
+* fixed bug in calculation of confidence intervals around non-objective values
 * checking for partial square bracket references on input
 * fixed error reporting for non-positive-definite covariances in FIML
 * implemented initial sorting-based speedup for FIML objectives
